ontol/ontol-compiler/test-cases/error/rel/invalid_subject.on
rel
    'a' // ERROR subject must be a domain type
    'b': text
